# finance_api

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  docker-compose.yaml  main.py  pyproject.toml
core/: config.py  database.py
locales/: messages.pot
locales/es/LC_MESSAGES/: messages.po
locales/pt_BR/LC_MESSAGES/: messages.po
migrations/: env.py
migrations/versions/: 266848a9adbf_create_users.py  93ad34b47057_create_entries.py  bcae39b74771_create_entries.py
modules/core/: config.py  database.py  expcetion.py  handlers.py  i18n.py  logger.py  main.py  models.py  repositories.py  schemas.py  types.py  utils.py
modules/core/middlewares/: __init__.py  locale_middleware.py  process_time_middleware.py
modules/core/tests/: conftest.py  test_handlers.py  test_translations.py  test_types.py  test_utils.py
modules/core/tests/fixtures/: __init__.py  client.py  database.py  factories.py
modules/core/tests/middlewares/: test_locale_middleware.py  test_process_time_middleware.py
modules/entry/: dependencies.py  enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  services.py  types.py
modules/entry/tests/: conftest.py  test_dependencies.py  test_repository.py  test_router.py  test_schemas.py  test_services.py  test_types.py
modules/entry/tests/fixtures/: __init__.py  entry.py  factories.py
modules/user/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
modules/user/tests/: conftest.py  test_dependencies.py  test_repository.py  test_router.py  test_services.py  test_utils.py
modules/user/tests/fixtures/: __init__.py  factories.py  user.py
scripts/: i18n.py  start_module.py
