[project]
name = "finance-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asgi-correlation-id>=5.0.1",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.139.0",
    "httpx2>=2.5.0",
    "psycopg2>=2.9.12",
    "pytest-asyncio>=1.4.0",
    "python-json-logger>=4.1.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "polyfactory>=3.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.fastapi]         
    entrypoint = "modules.core.main:app"

[tool.ruff]
exclude = [
    ".venv",
    "migrations",
    "**/__pycache__",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "Q",
    "T",
]

[tool.ruff.lint.per-file-ignores]
"*/tests/**/*.py" = ["F403"]

[tool.ruff.lint.isort]
known-first-party = ["modules"]
lines-between-types = 1

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
